Add edit dialog

--- a/src/components/app.less
+++ b/src/components/app.less
@@ -1,7 +1,7 @@
 @import './dialog';
+@import './edit-dialog';
 @import './header';
 @import './library';
-@import './new-dialog';
 @import './open-dialog';
 @import './timeline';
 @import './view-bar';
