--- a/src/components/edit-dialog.less
+++ b/src/components/edit-dialog.less
@@ -1,12 +1,12 @@
-.sv-new-dialog {
-  .sv-new-dialog-name {
+.sv-edit-dialog {
+  .sv-edit-dialog-name {
     width: 100%;
     margin-bottom: @padding-base;
   }
-  .sv-new-dialog-dimensions {
+  .sv-edit-dialog-dimensions {
     display: flex;
     margin-bottom: @padding-large;
-    .sv-new-dialog-dimensions-fields {
+    .sv-edit-dialog-dimensions-fields {
       width: 7rem;
       margin-right: @padding-base;
       input {
@@ -16,7 +16,7 @@
         }
       }
     }
-    .sv-new-dialog-dimensions-constrain {
+    .sv-edit-dialog-dimensions-constrain {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
