Give open cards a shadow

--- a/src/components/open-dialog.less
+++ b/src/components/open-dialog.less
@@ -8,6 +8,7 @@
       padding: @padding-smaller;
       .sv-open-dialog-project-card {
         padding: @padding-small @padding-base;
+        box-shadow: 0 0 0 1px @shadow;
         background-color: @gray;
         cursor: pointer;
         &:hover {
