Add a login form

--- a/src/components/button.less
+++ b/src/components/button.less
@@ -18,6 +18,10 @@
   &:hover, &:focus {
     background-color: mix(@gray-dark, @gray);
   }
+  &:focus {
+    box-shadow: 0 0 0 1px @brand-primary;
+    outline: none;
+  }
   &:active {
     background-color: mix(@gray-dark, @gray-darker);
   }
