Add a large modifier to the button component

--- a/src/components/button.less
+++ b/src/components/button.less
@@ -28,6 +28,10 @@
   &[disabled] {
     pointer-events: none;
   }
+  &.sv-large {
+    padding: @padding-small @padding-base;
+    font-size: 1rem;
+  }
   &.sv-secondary {
     background-color: @gray;
     &:hover, &:focus {
