Hook up login and sign up forms

--- a/src/components/header.less
+++ b/src/components/header.less
@@ -18,7 +18,7 @@
     .sv-header-nav:not(:last-child) {
       margin-right: @padding-small;
       padding-right: @padding-small;
-      border-right: 1px solid @gray-darker;
+      border-right: 1px solid @gray-light;
     }
   }
   .sv-header-controls {
