--- a/src/components/login.less
+++ b/src/components/login.less
@@ -22,5 +22,8 @@
       width: 100%;
       margin-bottom: @padding-small;
     }
+    form.sv-error input {
+      border-color: @brand-error;
+    }
   }
 }
