Allow toggle between create and log in

--- a/src/components/login.less
+++ b/src/components/login.less
@@ -10,6 +10,10 @@
   left: 0;
   .sv-login-content {
     width: 20rem;
+    p {
+      font-size: @font-size-small;
+      text-align: center;
+    }
     img, .sv-button {
       display: block;
       margin: 0 auto;
@@ -24,6 +28,9 @@
     }
     form.sv-error input {
       border-color: @brand-error;
+    }
+    .sv-button {
+      margin-top: @padding-base;
     }
   }
 }
