--- a/src/components/text-field.less
+++ b/src/components/text-field.less
@@ -1,6 +1,7 @@
 .sv-text-field {
   outline: none;
   white-space: nowrap;
+  user-select: auto;
   &:not([contenteditable="true"]) {
     cursor: default;
   }
