Only user-select: auto when contenteditable is true

--- a/src/components/text-field.less
+++ b/src/components/text-field.less
@@ -1,7 +1,9 @@
 .sv-text-field {
   outline: none;
   white-space: nowrap;
-  user-select: auto;
+  &[contenteditable="true"] {
+    user-select: auto;
+  }
   &:not([contenteditable="true"]) {
     cursor: default;
   }
