--- a/src/components/viewport.less
+++ b/src/components/viewport.less
@@ -3,6 +3,7 @@
 .sv-viewport {
   width: 100%;
   height: 100%;
+  font-family: 'Lato', Helvetica, sans-serif;
   position: relative;
   &.sv-dragging {
     box-shadow: 0 0 0 3px @brand-primary, @box-shadow-large;
