--- a/src/components/library.less
+++ b/src/components/library.less
@@ -183,6 +183,8 @@
     }
   }
   .sv-library-footer {
+    display: flex;
+    justify-content: space-between;
     flex-shrink: 0;
     padding: @padding-smaller;
     border-top: 1px solid @shadow-dark;
