Add nowrap to text layers

--- a/src/components/viewport-layer.less
+++ b/src/components/viewport-layer.less
@@ -33,6 +33,7 @@
     }
   }
   &[type="text"] {
+    white-space: nowrap;
     .sv-viewport-layer-anchor {
       border-color: @text-layer-color;
       &:before, &:after {
