Add ability to select (and jump to) a keyframe

--- a/src/components/timeline-layer.less
+++ b/src/components/timeline-layer.less
@@ -183,6 +183,9 @@
         position: absolute;
         top: 50%;
         transform: translate(-50%, -50%) rotate(45deg);
+        &.sv-selected {
+          background-color: @brand-primary;
+        }
       }
     }
   }
