Add a presets panel

--- a/src/components/library.less
+++ b/src/components/library.less
@@ -1,3 +1,5 @@
+@import './presets';
+
 @library-width: 20rem;
 
 @keyframes sv-library-assets-loading-before {
@@ -24,7 +26,6 @@
   flex-shrink: 0;
   width: @library-width;
   border-right: 1px solid @shadow-dark;
-  overflow: hidden;
   position: relative;
   .sv-library-preview {
     display: flex;
