Add a couple of simple svg shapes

--- a/src/components/presets.less
+++ b/src/components/presets.less
@@ -44,6 +44,14 @@
         width: 100%;
         padding-top: 100%;
         background-color: white;
+        position: relative;
+        svg {
+          width: 80%;
+          height: 80%;
+          position: absolute;
+          top: 10%;
+          left: 10%;
+        }
       }
     }
   }
