--- a/src/components/presets.less
+++ b/src/components/presets.less
@@ -1,9 +1,9 @@
 .sv-library-presets {
   position: relative;
   .sv-library-presets-panel {
-    border-radius: @border-radius-small;
+    border-radius: @border-radius-large;
     box-shadow: @box-shadow-large;
-    background-color: @gray-lighter;
+    background-color: @gray-lightest;
     position: absolute;
     bottom: 100%;
     left: 50%;
@@ -11,7 +11,7 @@
     transform: translate(-50%, @padding-smaller * -1);
     &:before {
       content: '';
-      border-top: @padding-smaller solid @gray-lighter;
+      border-top: @padding-smaller solid @gray-lightest;
       border-left: @padding-smaller solid transparent;
       border-right: @padding-smaller solid transparent;
       position: absolute;
@@ -23,11 +23,12 @@
     h5 {
       margin-bottom: @padding-smallest;
       padding: @padding-small @padding-base;
-      border-bottom: 1px solid @gray-dark;
-      border-top-left-radius: @border-radius-small;
-      border-top-right-radius: @border-radius-small;
-      color: @gray-darker;
-      background-color: @gray-lightest;
+      border-bottom: 1px solid @gray-lighter;
+      border-top-left-radius: @border-radius-large;
+      border-top-right-radius: @border-radius-large;
+      font-weight: 600;
+      color: @gray-dark;
+      background-color: white;
     }
     .sv-library-presets-panel-scroll {
       display: flex;
@@ -43,6 +44,7 @@
       .sv-library-presets-panel-item-asset {
         width: 100%;
         padding-top: 100%;
+        border-radius: @border-radius-large;
         background-color: white;
         position: relative;
         svg {
