--- a/src/components/presets.less
+++ b/src/components/presets.less
@@ -21,14 +21,26 @@
     }
 
     h5 {
+      display: flex;
+      justify-content: space-between;
       margin-bottom: @padding-smallest;
-      padding: @padding-small @padding-base;
+      padding: @padding-small;
+      padding-left: @padding-base;
       border-bottom: 1px solid @gray-lighter;
       border-top-left-radius: @border-radius-large;
       border-top-right-radius: @border-radius-large;
       font-weight: 600;
       color: @gray-dark;
       background-color: white;
+      a {
+        display: block;
+        width: 1.25rem;
+        height: 1.25rem;
+        .sv-icon {
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
     .sv-library-presets-panel-scroll {
       display: flex;
