--- a/src/components/viewport.less
+++ b/src/components/viewport.less
@@ -7,7 +7,7 @@
   font-family: 'Lato', Helvetica, sans-serif;
   position: relative;
   &.sv-dragging {
-    box-shadow: 0 0 0 3px @brand-primary, @box-shadow-large;
+    box-shadow: 0 0 0 2px @brand-primary, @box-shadow-large !important;
   }
 
   > .sv-viewport-layer {
