--- a/src/variables.less
+++ b/src/variables.less
@@ -1,5 +1,6 @@
 @brand-primary: deepskyblue;
 
+@shape-layer-color: spin(@brand-primary, -90%);
 @dummy-layer-color: spin(@brand-primary, -30%);
 @text-layer-color: spin(@brand-primary, 30%);
 @image-layer-color: spin(@brand-primary, 90%);
