Fix shapes in preset panel

--- a/src/components/presets.less
+++ b/src/components/presets.less
@@ -60,8 +60,8 @@
         background-color: white;
         position: relative;
         svg {
-          width: 80%;
-          height: 80%;
+          width: 80% !important;
+          height: 80% !important;
           position: absolute;
           top: 10%;
           left: 10%;
